# auth-service

./: .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  wait_postgres.sh
api/: db.py  firebase.py  main.py  migrate.py  user.py
api/auth/: user.py
api/cruds/: fingerprint.py  user.py
api/cruds/types/: bytes.py  uuid.py
api/models/: fingerprint.py  user.py
api/models/mixin/: timestamp.py
api/routers/: about.py  jwt.py  user.py
api/schemas/: fingerprint.py  health.py  jwt.py  user.py  version.py
api/utils/: singleton.py
client/sample/: serve.sh
client/sample/pages/: config.js  done.html
docker/fastapi/: Dockerfile
docker/postgres/: Dockerfile
help/: building_environment.md  developing_clients.md  using_sample_client.md
sample/pages/: index.html
