[tool.poetry]
name = "fingerpay-auth-service"
version = "0.1.0"
description = "A RESTAPI Service for user authentication constructed on FastAPI"
authors = ["ITO Manaki <colk@fingerpay.app>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
fastapi-sqlalchemy = "^0.2.1"
pydantic = {extras = ["email"], version = "^1.10.2"}
alembic = "^1.8.1"
sqlalchemy = "^1.4.44"
psycopg2 = "^2.9.5"
asyncpg = "^0.27.0"
sqlalchemy-utils = "^0.39.0"
firebase-admin = "^6.0.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.20.2"
aiosqlite = "^0.17.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
